# train-ai

./: .cookiecutter.json  .env  .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  ollama.py
app/core/: config.py
app/schemas/: ollama.py
app/services/: agenta.py  ollama.py
docs/: conf.py  index.md  reference.md  usage.md
src/train_ai/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
