[tool.poetry]
name = "train-ai"
version = "0.1.0"
description = "AI FastAPI Project - A FastAPI application for AI/ML services"
authors = ["Antonella Schiavoni <antonellaschiavoni2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antonella-schiavoni/train-ai"
repository = "https://github.com/antonella-schiavoni/train-ai"
documentation = "https://train-ai.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.poetry.urls]
Changelog = "https://github.com/antonella-schiavoni/train-ai/releases"

[tool.poetry.dependencies]
python = "^3.9"
# FastAPI and web framework dependencies
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# AI/ML libraries
torch = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.35.0"
numpy = "^1.24.3"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.17.0"

# Data processing
pillow = "^10.0.1"
opencv-python = "^4.8.1.78"
requests = "^2.31.0"

# Database and storage
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
redis = "^5.0.1"

# Monitoring and logging
loguru = "^0.7.2"
prometheus-client = "^0.18.0"

# Environment and configuration
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

# File operations
aiofiles = "^23.2.0"

# Optional: for deployment
gunicorn = {version = "^21.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

# Code quality
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
bandit = "^1.7.4"

# Documentation
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
furo = "^2021.11.12"
myst-parser = "^0.16.1"

# Development tools
pre-commit = "^2.16.0"
pre-commit-hooks = "^4.1.0"
coverage = {extras = ["toml"], version = "^6.2"}

[tool.poetry.extras]
deployment = ["gunicorn"]

[tool.poetry.scripts]
train-ai = "app.main:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["train_ai", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
known_first_party = ["app"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
